# CMiniLang

./: CMakeLists.txt  README.md  cast.cpp  cast.h  cgen.cpp  cgen.h  clexer.cpp  clexer.h  cparser.cpp  cparser.h  cvm.cpp  cvm.h  main.cpp  memory.h  types.cpp  types.h
code/: xc.txt
test/: test_lexer.cpp
